Ajustes na Tela de Cadastro e Pronta a Tela de Cadastro de Foto

--- a/Projeto Swing/bin/.gitignore
+++ b/Projeto Swing/bin/.gitignore
@@ -7,3 +7,10 @@
 /Cadastro.class
 /Cadastro$1.class
 /TesteDeLista.class
+/Teste.class
+/Teste$1.class
+/CadastroFoto.class
+/_imagens/
+/imagem-usuario.png
+/user_icon-icons.com_66546.png
+/usuario-imagem.png
