Add o GPS mas tem q testar tudo ainda

--- a/Projeto Swing/bin/.gitignore
+++ b/Projeto Swing/bin/.gitignore
@@ -1,17 +1,12 @@
+/Cadastro.class
+/CadastroFoto.class
+/CadastroPronto.class
 /Main.class
 /MenuLogin$1.class
 /MenuLogin.class
-/TelaInicioDoAPP.class
 /TelaContinueAoCadastro.class
 /TelaEscolhaEstiloDeCadastro.class
-/Cadastro.class
-/Cadastro$1.class
-/TesteDeLista.class
-/Teste.class
-/Teste$1.class
-/CadastroFoto.class
-/_imagens/
-/imagem-usuario.png
-/user_icon-icons.com_66546.png
+/TelaInicioDoAPP.class
 /usuario-imagem.png
-/CadastroPronto.class
+/GPS.class
+/GoogleMapsDemo.class
