--- a/Projeto Swing/bin/.gitignore
+++ b/Projeto Swing/bin/.gitignore
@@ -1,12 +1,1 @@
-/Cadastro.class
-/CadastroFoto.class
-/CadastroPronto.class
-/Main.class
-/MenuLogin$1.class
-/MenuLogin.class
-/TelaContinueAoCadastro.class
-/TelaEscolhaEstiloDeCadastro.class
-/TelaInicioDoAPP.class
-/usuario-imagem.png
-/GPS.class
-/GoogleMapsDemo.class
+/projetoswingpoo/
