--- a/Projeto Swing/.classpath
+++ b/Projeto Swing/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="Z:/POO1/TrabalhoSwing/ProjetoSwingPOO/Projeto Swing/lib/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="Z:/POO1/TrabalhoSwing/ProjetoSwingPOO/Projeto Swing/lib/swingx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
